# calculator-for-testing

./: .gitignore  .travis..yml.orig.2  .travis.yml  CMakeLists.txt  README.md
scripts/: build  build-and-run-unit-test  clean  configure  run  run-unit-tests  test
src/: CMakeLists.txt  main.cpp
src/core/: string_parser.cpp  string_parser.h  string_parser_test.cpp
